# template-pdm-plugin

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pdm_plugin/: __init__.py
